package nl.vaneijndhoven.dukes.luke.drag;

import io.vertx.core.json.JsonObject;
import rx.Observable;

public class StartLightObserver {

    public Observable<JsonObject> observe(JsonObject startLightDetection) {
        return Observable.empty();
    }


}
